--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>8 Aught 2002</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 812 8133 1636</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kendari, Indonesia</span></li>
               </ul>
